# rocky-ridge-chatbot

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  chainlit.md.template  pyproject.toml  railway.toml
.chainlit/: config.toml.template
eval/: run_dry_run.py
scripts/: entrypoint.sh  render_config.py  smoke.py
src/chatbot/: __init__.py  agent.py  app.py  citation_parser.py  config.py  conversation_log.py  cost.py  exceptions.py  foundry_client.py  healthcheck.py  injection_filter.py  prompt_builder.py  query_reformulator.py  rate_limiter.py  refusal_gate.py  research_trace.py  retriever.py  session.py  tools.py
tests/: conftest.py  test_agent.py  test_citation_parser.py  test_config.py  test_conversation_log.py  test_foundry_client.py  test_injection_filter.py  test_prompt_builder.py  test_query_reformulator.py  test_rate_limiter.py  test_refusal_gate.py  test_retriever.py  test_tools.py
